--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -1,3 +1,10 @@
+body {
+
+  padding-top: 5em;
+		
+}
+
+
 .ng-cloak {
 
   display: none;
@@ -23,7 +30,7 @@ W3C: progid:DXImageTransform.Microsoft.gradient( startColorstr='#812b39', endCol
 	-moz-transition: all 0.4s;   
 	-webkit-transition: all 0.4s;  
 	transition: all 0.4s;  
-}
+	}
 
 .netValueMode-color {
 
