--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -11,80 +11,37 @@ body {
 
 }
 
-
-.red-gradient {
- 
-  background: #812b39; /* Old browsers */
-	background: -moz-linear-gradient(top, #812b39 0%, #471824 100%) !important; /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#812b39), color-stop(100%,#471824)) !important; /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #812b39 0%,#471824 100%) !important; /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #812b39 0%,#471824 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #812b39 0%,#471824 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #812b39 0%,#471824 100%) !important; /* filter */
-W3C: progid:DXImageTransform.Microsoft.gradient( startColorstr='#812b39', endColorstr='#471824',GradientType=0 ); /* IE6-9 */
-
-
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
 }
 
-.animate {
+.area {
+  fill: steelblue;
+}
+
+#chart-contain div {
 	-moz-transition: all 0.4s;   
 	-webkit-transition: all 0.4s;  
 	transition: all 0.4s;  
+
 	}
 
-.netValueMode-color {
-
-	background-color: #f0eefb !important;
-	background-image: none !important;
-	
+#chart-contain {
+	height:300px;
 }
 
-
-.interestMode-color {
-
-	background-color: #b4e6ca !important;
-	background-image: none !important;
-
+div.bar {
+	display: inline-block;
+	margin:0 auto;
+	width: 5px;
+	height: 75px;	/* Gets overriden by D3-assigned height below */
+	margin-right: 0px;
+	background-color: teal;
 }
 
-.timeFrameMode-color {
-
-	background-color: #e6b4d1 !important;
-	background-image: none !important;
- 
-}
-
-.chartHolder {
-
-  position: absolute;
-  top: 75px;
-  right: 40px;
-  min-width: 480px;
-
-
-}
-
-@media all and (max-width: 969px) {
-
-  .chartHolder {
-    
-		position: relative;	
-		right: 0px;
-		width: 75%;
-		min-width: 0px;
-  
-  }
-  
-  #chart {
-	min-width: 480px;
-  }
-}
-
-@media all and (max-width: 400px) {
-
-  
-  #chart {
-  
-	min-width: 320px;
-  }
+div.bar:hover {
+	width: 25px;
 }
