--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -22,15 +22,32 @@ body {
   fill: steelblue;
 }
 
-#chart-contain div {
+#chart-contain div, #chart-box, .thumb {
 	-moz-transition: all 0.4s;   
 	-webkit-transition: all 0.4s;  
 	transition: all 0.4s;  
 
 	}
 
+.thumb {
+	width:200px;
+	height:200px;
+}
+.thumb:hover {
+	width:250px;
+	height:250px;
+}
+
+#chart-box {
+	width:50px;
+	height:50px;
+}
+
 #chart-contain {
-	height:300px;
+	/*height:auto;
+	width:auto;*/
+	width:auto;
+	
 }
 
 div.bar {
