--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -32,33 +32,24 @@ body {
 .thumb {
 	width:100px;
 	height:100px;
-	position: absolute;
-
+	background-color:#eee;
 }
 .thumb:hover {
 	width:250px;
 	height:250px;
 }
 
-#chart-box {
+.chart-box {
 	width:50px;
 	height:50px;
 }
 
-#chart-contain {
-	width:auto;
-	
-}
 
-div.bar {
+div.graph-bar-1 {
 	display: inline-block;
 	margin:0 auto;
 	width: 5px;
 	height: 75px;	/* Gets overriden by D3-assigned height below */
 	margin-right: 0px;
 	background-color: teal;
-}
-
-div.bar:hover {
-	color:'red';
 }
