--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -11,45 +11,23 @@ body {
 
 }
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.area {
-  fill: steelblue;
-}
-
-#chart-contain div, #chart-box, .thumb {
+.animate {
 	-moz-transition: all 0.4s;   
 	-webkit-transition: all 0.4s;  
 	transition: all 0.4s;  
+}
 
-	}
+.blockV {
+	width: 100%;
+	height: 100%;
+}
 
 .thumb {
-	width:100px;
-	height:100px;
+	width:125px;
+	height:125px;
 	background-color:#eee;
 }
 .thumb:hover {
 	width:250px;
 	height:250px;
-}
-
-.chart-box {
-	width:50px;
-	height:50px;
-}
-
-
-div.graph-bar-1 {
-	display: inline-block;
-	margin:0 auto;
-	width: 5px;
-	height: 75px;	/* Gets overriden by D3-assigned height below */
-	margin-right: 0px;
-	background-color: teal;
 }
