--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -11,10 +11,10 @@ body {
 
 }
 
-.animate {
-	-moz-transition: all 0.4s;   
-	-webkit-transition: all 0.4s;  
-	transition: all 0.4s;  
+.animate, html * {
+	-moz-transition: all 0.3s;   
+	-webkit-transition: all 0.3s;  
+	transition: all 0.3s;  
 }
 
 .blockV {
