--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -26,6 +26,7 @@ body {
 	width:125px;
 	height:125px;
 	background-color:#eee;
+	margin: auto;
 	position: relative;
 }
 
@@ -41,3 +42,8 @@ body {
 	width:250px;
 	height:250px;
 }
+
+
+rect:hover {
+	opacity: 0.5;
+};
