--- a/views/settings.html
+++ b/views/settings.html
@@ -1,4 +1,4 @@
-<form class='well' id='settings' ng-controller='FormCtrl' ng:class="{true:'open', false:'closed'}[settingsOpen == true]">
+<form class='well' id='settings' ng-controller='SettingsCtrl' ng:class="{true:'open', false:'closed'}[settingsOpen == true]">
 	<div id='toggle-settings' ng-click="settingsOpen = !settingsOpen;toggleSettingsOpen();" >
 		<button class='btn btn-large btn-default'>
 			<span class='glyphicon glyphicon-wrench rotate90'></span>
