--- a/views/charts.html
+++ b/views/charts.html
@@ -1,13 +1,15 @@
-<div class='chart-container'>
-	<div id='chart-container-1' class='inline-block'>
-		<div class='thumb'>
-			<div class='frame'>
+<div ng-controller='ChartCtrl'>
+	<div class='chart-container'>
+		<div id='chart-container-1' class='inline-block'>
+			<div class='thumb'>
+				<div class='frame'>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div id='chart-container-2' class='inline-block'>
-		<div class='thumb'>
-			<div class='frame'>
+		<div id='chart-container-2' class='inline-block'>
+			<div class='thumb'>
+				<div class='frame'>
+				</div>
 			</div>
 		</div>
 	</div>
