--- a/views/charts.html
+++ b/views/charts.html
@@ -3,12 +3,14 @@
 		<div id='chart-container-1' class='inline-block'>
 			<div class='thumb'>
 				<div class='frame'>
+					<span class="glyphicon centered-absl fade-in glyph-large glyphicon-question-sign"></span>
 				</div>
 			</div>
 		</div>
 		<div id='chart-container-2' class='inline-block'>
 			<div class='thumb'>
 				<div class='frame'>
+					<span class="glyphicon centered-absl fade-in glyph-large glyphicon-question-sign"></span>
 				</div>
 			</div>
 		</div>
