--- a/styles/bootstrapcalculator.css
+++ b/styles/bootstrapcalculator.css
@@ -30,6 +30,10 @@ body {
 
 }
 
+.chart-label {
+		font-size:0.5rem;
+}
+
 .glyph-large {
 	font-size: 550%;
 	width: 80px;
@@ -37,7 +41,7 @@ body {
 }
 
 .fade-in {
-	 -webkit-animation: fadein 0.5s; /* Safari and Chrome */
+	 -webkit-animation: fadein 0.550s; /* Safari and Chrome */
 }
 
 @-webkit-keyframes fadein { /* Safari and Chrome */
@@ -59,6 +63,10 @@ body {
 	width: 75%;
 	text-align: center;
 	opacity: 0;
+}
+
+.show-on-hover {
+	opacity: 0;	
 }
 
 .frame {
@@ -118,7 +126,7 @@ textarea:focus, input:focus, .btn:focus{
 	opacity: 0.75;
 }
 
-.thumb:hover .chart-title {
+.thumb:hover .chart-title, .thumb:hover .show-on-hover {
 	opacity: 1;
 }
 
