before refactor chartmaster

--- a/views/charts.html
+++ b/views/charts.html
@@ -14,5 +14,12 @@
 				</div>
 			</div>
 		</div>
+		<div id='chart-container-3' class='inline-block'>
+			<div class='thumb'>
+				<div class='frame'>
+					<span class="glyphicon centered-absl fade-in glyph-large glyphicon-question-sign"></span>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
