removed block class

--- a/views/charts.html
+++ b/views/charts.html
@@ -1,20 +1,20 @@
 <div ng-controller='ChartCtrl'>
 	<div class='chart-container'>
-		<div id='chart-container-1' class='inline-block'>
+		<div id='chart-container-1'>
 			<div class='thumb'>
 				<div class='frame'>
 					<span class="glyphicon centered-absl fade-in glyph-large glyphicon-question-sign"></span>
 				</div>
 			</div>
 		</div>
-		<div id='chart-container-2' class='inline-block'>
+		<div id='chart-container-2'>
 			<div class='thumb'>
 				<div class='frame'>
 					<span class="glyphicon centered-absl fade-in glyph-large glyphicon-question-sign"></span>
 				</div>
 			</div>
 		</div>
-		<div id='chart-container-3' class='inline-block'>
+		<div id='chart-container-3'>
 			<div class='thumb'>
 				<div class='frame'>
 					<span class="glyphicon centered-absl fade-in glyph-large glyphicon-question-sign"></span>
