--- a/common/styles/bootstrapcalculator.css
+++ b/common/styles/bootstrapcalculator.css
@@ -6,7 +6,7 @@
 
 .animate, html * {
 	-moz-transition: all 0.3s;   
-	-webkit-transition: all 0.3s;  
+	-webkit-transition: all 0.3s ease-in-out;  
 	transition: all 0.3s;  
 }
 
