--- a/common/styles/bootstrapcalculator.css
+++ b/common/styles/bootstrapcalculator.css
@@ -76,6 +76,7 @@
   top: 0; left: 0; bottom: 0; right: 0;
 }
 
+
 .white-bg {
 	background-color: white;
 }
@@ -98,16 +99,28 @@ textarea:focus, input:focus, .btn:focus{
 }
 
 .thumb {
-	width:125px;
-	height:125px;
+	width:100%;
+	height:100%;
 	background-color:#eee;
-	position: relative;
+	position: absolute;
 	margin:auto;
 }
 
-.thumb:hover, .thumb.pinned {
-	width:250px;
-	height:250px;
+.thumb-box {
+	position: relative;
+  width: 30%;
+  padding-bottom: 30%;
+}
+
+.thumb-box:hover {
+	width:60%;
+	padding-bottom: 60%;
+}
+
+
+.thumb-box.pinned {
+	width:100%;
+	padding-bottom: 100%;
 }
 
 .thumb:hover .rotate-hover {
