--- a/common/styles/bootstrapcalculator.css
+++ b/common/styles/bootstrapcalculator.css
@@ -72,6 +72,7 @@
 	width: 85%;
 	background-color: #fefefe;
   margin: auto;
+  border-radius: 2%;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
 }
@@ -102,6 +103,7 @@ textarea:focus, input:focus, .btn:focus{
 	width:100%;
 	height:100%;
 	background-color:#eee;
+	border-radius: 2%;
 	position: absolute;
 	margin:auto;
 }
@@ -110,6 +112,7 @@ textarea:focus, input:focus, .btn:focus{
 	position: relative;
   width: 30%;
   padding-bottom: 30%;
+  margin: auto;
 }
 
 .thumb-box:hover {
@@ -129,15 +132,11 @@ textarea:focus, input:focus, .btn:focus{
 	transform:rotate(12deg);
 }
 
-.pinned {
-	border:1px solid #ccc;
-}
-
 .chart-container:hover .thumb:not(:hover) {
 	opacity: 0.75;
 }
 
-.thumb:hover .chart-title, .thumb:hover .show-on-hover {
+.thumb:hover .chart-title, .thumb:hover .show-on-hover, .thumb-box.pinned .show-on-hover {
 	opacity: 1;
 }
 
@@ -158,10 +157,6 @@ textarea:focus, input:focus, .btn:focus{
 
 .hidden {
 	display:none;
-}
-#settings.open {
-	/*height:auto;
-	overflow:none;*/
 }
 
 .pad-top {
